package model;

public class MyceliumAbsorbingTecton extends Tecton {
    private double absorbtionTimer;

    @Override
    public MyceliumAbsorbingTecton newMe() {
        return null;
    }

    @Override
    public void tick(double dT) {
    }
}