package model;

public class NoMushroomTecton extends Tecton {

    @Override
    public NoMushroomTecton newMe() {
        return null;
    }

    @Override
    public void growMushroom(Fungus fungus) {
    }
}