@startuml Tecton/special-tecton-classes

class Tecton
class NoMushroomTecton {
    newMe() : NoMushroomTecton
    growMushroom(Fungus)
}
class SingleMyceliumTecton {
    newMe() : SingleMyceliumTecton
    canGrowMyceliumFrom(Fungus) : boolean
}
class MyceliumAbsorbingTecton {
    absorbtionTimer
    newMe() : MyceliumAbsorbingTecton
    tick(dT)
}

Tecton <|-- NoMushroomTecton
Tecton <|-- SingleMyceliumTecton
Tecton <|-- MyceliumAbsorbingTecton

@enduml